--- a/index.html
+++ b/index.html
@@ -68,26 +68,27 @@
         <img src="certificate.png" width="200" height="200">
       <h3>Business Management</h3>
 
-      <p>2020-07 Marketig Foundations: Consumer Behaviour <strong>(Linkedin)</strong></li></p>
-      <p>2020-08 Introduction to Marketing <strong>(University of Pensylvania, Wharton)</strong></p>
-      <p>2020-08 Project Management Foundations<strong> (National Association of State Boards of Accountancy, Linkedin)</strong></p>
-      <p>2021-07 Professional Skills for International Business <strong>(Endorsed by the CMI, University of London)</strong></p>
-      <p>2021-07 Management Skills for International Business <strong>(Endorsed by the CMI, University of London)</strong></p>
+      <p>Marketig Foundations: Consumer Behaviour <strong>(Linkedin)</strong></li></p>
+      <p>Introduction to Marketing <strong>(University of Pensylvania, Wharton)</strong></p>
+      <p>Project Management Foundations<strong> (National Association of State Boards of Accountancy, Linkedin)</strong></p>
+      <p>Professional Skills for International Business <strong>(Endorsed by the CMI, University of London)</strong></p>
+      <p>Management Skills for International Business <strong>(Endorsed by the CMI, University of London)</strong></p>
 
       <h3>IT</h3>
 
-      <p>2019-09 Computer Applications Assistant <Strong>(NVQ LEVEL 3, National Apprentice and Industrial Training Authority)</Strong></p>
-      <p>2020-05 Introducation to IoT <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
-      <p>2020-06 The Fundementals of Digital Marketing <strong>(Google Digital Garage)</strong></p>
-      <p>2020-07 Cybersecurity Essentials <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
-      <p>2020-07 Elements of AI <strong>(University of Helsinki)</strong></p>
-      <p>2020-11 PCAP: Programming Essentials in Python <strong>(Python Institute)</strong></p>
-      <p>2021-03 The Bits and Bytes of Computer Networking <strong>(Google, Specialization)</strong></p>
-      <p>2021-04 Operating Systems and You: Becoming a Power User <strong>(Google, Specialization)</strong></p>
-      <p>2021-06 System Administration and IT Infrastructure Services <strong>(Google, Specialization)</strong></p>
-      <p>2021-06 Introduction to CyberSecurity <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
-      <p>2021-08 Advertising with Facebook <strong>(Facebook, Specialization)</strong></p>
-      <p>2021-08 IT Security: Defense against the digital dark arts<strong> (Google, Specialization)</strong></p>
+      <p>Computer Applications Assistant <Strong>(NVQ LEVEL 3, National Apprentice and Industrial Training Authority)</Strong></p>
+      <p>Introducation to IoT <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
+      <p>The Fundementals of Digital Marketing <strong>(Google Digital Garage)</strong></p>
+      <p>Cybersecurity Essentials <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
+      <p>Elements of AI <strong>(University of Helsinki)</strong></p>
+      <p>PCAP: Programming Essentials in Python <strong>(Python Institute)</strong></p>
+      <p>The Bits and Bytes of Computer Networking <strong>(Google, Specialization)</strong></p>
+      <p>Operating Systems and You: Becoming a Power User <strong>(Google, Specialization)</strong></p>
+      <p>System Administration and IT Infrastructure Services <strong>(Google, Specialization)</strong></p>
+      <p>IT Security: Defense against the digital dark arts<strong> (Google, Specialization)</strong></p>                                                     
+      <p>Introduction to CyberSecurity <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
+      <p>Advertising with Facebook <strong>(Facebook, Specialization)</strong></p>
+      
 
   </div>
     <hr>
