--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <hr>
       <h2>Certifications</h2>
         <img src="certificate.png" width="200" height="200">
-      <h3>Business Management</h3>
+      <h3>Management</h3>
 
       <p>Marketig Foundations: Consumer Behaviour <strong>(Linkedin)</strong></li></p>
       <p>Introduction to Marketing <strong>(University of Pensylvania, Wharton)</strong></p>
