--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <hr>
 
     <div class="skills">
-      <h2>My Skills.</h2>
+      <h2>My Skills</h2>
       <div class="skill-row">
         <img class="hoodie-boy" src="hoodie-boy.png" width="200" height="200">
 
