--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <h2>Education</h2>
       <img src="education.png" width="200" height="200">
-      <p>Completed my High School Education from <a href="http://www.mahanamacc.sch.lk/index.html">Mahanama College, Monaragala</a></p>
+      <p>Completed my High School Education from <a href="http://www.mahanamacc.sch.lk/index.html">Mahanama College, Monaragala (2014)</a></p>
       <p>Completed a Diploma in Human Resource Management, (2019-2020, <a href="https://www.jmc.lk"> JMC</a>)</p>
       <p><a href="http://vtasl.gov.lk/program/oneprogram/NTQ=/Q0VOLzAwMDc="> NVQ LEVEL 5 ICT</a> (Expected Graduation: August 2021, <a href="https://www.vtasl.gov.lk"> VTA, Sri Lanka</a>)</p>
       <p>CCNA (Expected Graduation: 2022, <a href="https://www.netacad.com/academy/3944">Cisco Networking Academy, Sri Lanka</a>)</p>
