--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <p>Professional Skills for International Business <strong>(Endorsed by the CMI, University of London)</strong></p>
       <p>Management Skills for International Business <strong>(Endorsed by the CMI, University of London)</strong></p>
       <p>Project Management Foundations<strong> (National Association of State Boards of Accountancy, Linkedin)</strong></p>
-      <p>Conflict Management Specialization <strong>(University of California, Irvine, Specialization)</strong></p>
+      <p>Conflict Management Specialization <strong>(University of California, Irvine)</strong></p>
 
       <h3>IT</h3>
 
