--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <p>Completed my High School Education from <a href="http://www.mahanamacc.sch.lk/index.html">Mahanama College, Monaragala </a> (2014)</p>
       <p>Completed a Diploma in Human Resource Management, (2019-2021, <a href="https://www.jmc.lk"> JMC</a>)</p>
       <p><a href="http://vtasl.gov.lk/program/oneprogram/NTQ=/Q0VOLzAwMDc="> NVQ LEVEL 5 ICT</a> (Expected Graduation: October 2021, <a href="https://www.vtasl.gov.lk"> VTA, Sri Lanka</a>)</p>
-      <p>CCNA (Expected Graduation: 2022, <a href="https://www.netacad.com/academy/3944">Cisco Networking Academy, Sri Lanka</a>)</p>
+      <p>CCENT (Cisco Networking Academy, Sri Lanka</a>)</p>
       <hr>
       <h2>Certifications</h2>
         <img src="certificate.png" width="200" height="200">
