--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <h2>Education</h2>
       <img src="education.png" width="200" height="200">
       <p>Completed my High School Education from <a href="http://www.mahanamacc.sch.lk/index.html">Mahanama College, Monaragala </a> (2014)</p>
-      <p>Completed a Diploma in Human Resource Management, (2019-2021, <a href="https://www.jmc.lk"> JMC</a>)</p>
+      <p>Completed a Diploma in Human Resource Management, (2019-2020, <a href="https://www.jmc.lk"> JMC</a>)</p>
       <p><a href="http://vtasl.gov.lk/program/oneprogram/NTQ=/Q0VOLzAwMDc="> NVQ LEVEL 5 ICT</a> (Expected Graduation: October 2021, <a href="https://www.vtasl.gov.lk"> VTA, Sri Lanka</a>)</p>
       <p>CCENT (Cisco Networking Academy, Sri Lanka</a>)</p>
       <hr>
@@ -97,7 +97,7 @@
     <hr>
     <div class="skill-row">
 
-      <h2>Hobbies</h2>
+      <h2>Projects and Hobbies</h2>
 
       <img class="hobbies" src="hobbies.png" width="200" height="200">
       <img class="hobbies" src="hobbies1.png" width="200" height="200">
@@ -122,7 +122,7 @@
 
   <div class="contact-me">
     <h2>Get In Touch</h2>
-    <h3>if you wanna reach me</h3>
+    <h3>You can reach me, here</h3>
     <p class="get-in-touch">Send me an email. I'll get back to you ASAP</p>
     <a class="btn" href="mailto:greshanbovithanthrige@gmail.com">CONTACT ME</a>
   </div>
