--- a/index.html
+++ b/index.html
@@ -43,15 +43,18 @@
 
     <div class="skills">
       <p>System Administration (Workin Proficiency)</p>
+      <p>Hardware Configuration (Advanced) </p>
+      <p>Hardware Troubleshooting (Advanced)</p>
       <p>Network Configuration (Intermidiate)</p>
       <p>Software Installation (Advanced)</p>
       <p>Troubleshooting (Advanced)</p>
       <p>Windows Environment (Intermidiate)</p>
-      <p>Linux Environment (Workin Proficiency)</p>
-      <p>Customer Service (Adavanced)</p>
-      <p>Technical Support (Intermidiate)</p>
+      <p>Linux Environment (Workin Proficiency)</p>
+      <p>Technical Support (Advanced)</p>
       <p>HTML (Working Proficiency)</p>
       <p>CSS (Working Proficiency)</p>
+      <p>Customer Service</p>
+      <p>Vendor Relations</p>
 
   </div>
 
@@ -77,7 +80,8 @@
 
       <h3>IT</h3>
 
-      <p>Computer Applications Assistant <Strong>(NVQ LEVEL 3, National Apprentice and Industrial Training Authority)</Strong></p>
+  <p>Computer Hardware Technician <Strong>(NVQ LEVEL 4, National Apprentice and Industrial Training Authority)</Strong></p>
+<p>Computer Applications Assistant <Strong>(NVQ LEVEL 3, National Apprentice and Industrial Training Authority)</Strong></p>
       <p>The Fundementals of Digital Marketing <strong>(Google Digital Garage)</strong></p>
       <p>Advertising with Facebook <strong>(Facebook, Specialization)</strong></p>                                                   
       <p>Introduction to CyberSecurity <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
