--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <p><a href="https://drive.google.com/drive/folders/1G60pORIFLIIBUbvu_fGdwZ1q6OWYR3op?usp=sharing"> Sample work from GB Enterprises</a></p>
       <p><a href="https://drive.google.com/drive/folders/1y_1tL_3lfZaXHcVeyou1suOHYa0UDQQy?usp=sharing">DIY 18650 3S5P Battery Pack for a Home Genarator exitation issue</a></p>
       <p><a href="https://youtu.be/MUyKXJJOx-0"> DIY Laptop Cooling Fan with Variable Speed Control (With a PWM Module)</a></p>
-      <p>Playing around with new OSs and Softwares</p>
+      <p>Managing my homelab (Virtualization)</p>
       <p>Learning new industry standards and keeping myself up to date</p>
       <p>Reading Books and articles related to IT and Business Management</p>
       <p>Watching videos about my dream vehicle, <a href="https://www.youtube.com/watch?v=pl6L-tXd8yo">Toyota Land Cruiser 40 series</a></p>
@@ -137,7 +137,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/greshanbovithanthrige/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/gbovithanthrige">Twitter</a>
     <a class="footer-link" href="https://greshanbovithanthrige.medium.com/">Website</a>
-    <p class="copyright">© 2021 Greshan Bovithanthrige.</p>
+    <p class="copyright">© 2022 Greshan Bovithanthrige.</p>
   </div>
 
 
