--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="profile">
       <img src="GB.png" alt="img-png" height="200" width="200">
       <h2>Hello.</h2>
-      <p class="intro">Dependable and goal-oriented IT Specialist with 5+ years of experience maintaining in-house IT systems and providing comprehensive customer support. Provided in-depth technical support to clients at a Tier 2 level, solving 99.2% of issues
+      <p class="intro">Dependable and goal-oriented IT Specialist with 5+ years of experience maintaining IT systems and providing comprehensive customer support. Provided in-depth technical support to clients at a Tier 2 level, solving 99.2% of issues
         without transferring to Tier 3 support.
         And I'm the owner of GB Enterprises. A company which provides technical support for small scale companies.</p>
     </div>
@@ -45,7 +45,10 @@
       <p>System Administration (Workin Proficiency)</p>
       <p>Hardware Configuration (Advanced) </p>
       <p>Hardware Troubleshooting (Advanced)</p>
+      <p>Preventive Maintainance (Advanced) </p>
+      <p>Computer Repair (Advanced) </p>
       <p>Network Configuration (Intermidiate)</p>
+      <p>Internet Protocol Suite (TCP/IP) </p>
       <p>Software Installation (Advanced)</p>
       <p>Troubleshooting (Advanced)</p>
       <p>Windows Environment (Intermidiate)</p>
@@ -53,8 +56,14 @@
       <p>Technical Support (Advanced)</p>
       <p>HTML (Working Proficiency)</p>
       <p>CSS (Working Proficiency)</p>
+      <p>MySQL (Intermediate)</p>
+      <p>Android</p>
+      <p>Open Source</p>
+      <p>IT Infrastructure Management</p>
       <p>Customer Service</p>
       <p>Vendor Relations</p>
+      <p>IT Consulting </p>
+      <p>Cybersecurity</p>
 
   </div>
 
@@ -64,7 +73,7 @@
       <img src="education.png" width="200" height="200">
       <p>Completed my High School Education from <a href="http://www.mahanamacc.sch.lk/index.html">Mahanama College, Monaragala </a> (2014)</p>
       <p>Completed a Diploma in Human Resource Management, (2019-2020, <a href="https://www.jmc.lk"> JMC</a>)</p>
-      <p><a href="http://vtasl.gov.lk/program/oneprogram/NTQ=/Q0VOLzAwMDc="> NVQ LEVEL 5 ICT</a> (Expected Graduation: October 2021, <a href="https://www.vtasl.gov.lk"> VTA, Sri Lanka</a>)</p>
+      <p><a href="http://vtasl.gov.lk/program/oneprogram/NTQ=/Q0VOLzAwMDc="> National Diploma in ICT (NVQ LEVEL 5)</a> (Expected Graduation: October 2021, <a href="https://www.vtasl.gov.lk"> VTA, Sri Lanka</a>)</p>
       <p>CCENT (Cisco Networking Academy, Sri Lanka</a>)</p>
       <hr>
       <h2>Certifications</h2>
@@ -84,7 +93,7 @@
 <p>Computer Applications Assistant <Strong>(NVQ LEVEL 3, National Apprentice and Industrial Training Authority)</Strong></p>
       <p>The Fundementals of Digital Marketing <strong>(Google Digital Garage)</strong></p>
       <p>Advertising with Facebook <strong>(Facebook, Specialization)</strong></p>                                                   
-      <p>Introduction to CyberSecurity <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
+      <p>Networking Essentials <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
       <p>Cybersecurity Essentials <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
       <p>Introducation to IoT <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
       <p>Elements of AI <strong>(University of Helsinki)</strong></p>
