--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
       <p>Hardware Troubleshooting (Advanced)</p>
       <p>Preventive Maintainance (Advanced) </p>
       <p>Computer Repair (Advanced) </p>
-      <p>Network Configuration (Intermidiate)</p>
+      <p>Network Configuration (Intermediate)</p>
       <p>Internet Protocol Suite (TCP/IP) </p>
       <p>Software Installation (Advanced)</p>
       <p>Troubleshooting (Advanced)</p>
-      <p>Windows Environment (Intermidiate)</p>
+      <p>Windows Environment (Intermediate)</p>
       <p>Linux Environment (Workin Proficiency)</p>
       <p>Technical Support (Advanced)</p>
       <p>HTML (Working Proficiency)</p>
