--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
 
       <h2>Projects and Hobbies</h2>
 
-      <img class="hobbies" src="hobbies.png" width="200" height="200">
-      <img class="hobbies" src="hobbies1.png" width="200" height="200">
+      <img class="hobbies" src="hobbies.png" width="200" height="200">
       
       <p><a href="https://greshanbovithanthrige.medium.com/">Blogging</a></p>
       <p><a href="https://youtu.be/yLvxnuM0BKY">ESXI Sever Project</a></p>
@@ -123,8 +122,15 @@
       <p><a href="https://drive.google.com/drive/folders/1y_1tL_3lfZaXHcVeyou1suOHYa0UDQQy?usp=sharing">DIY 18650 3S5P Battery Pack for a Home Genarator exitation issue</a></p>
       <p><a href="https://youtu.be/MUyKXJJOx-0"> DIY Laptop Cooling Fan with Variable Speed Control (With a PWM Module)</a></p>
       <p>Managing my homelab (Virtualization)</p>
-      <p>Learning new industry standards and keeping myself up to date</p>
+    
+<h2>Hobbies</h2>
+
+      <img class="hobbies" src="hobbies1.png" width="200" height="200">
+
+  <p>Learning new industry standards and keeping myself up to date</p>
       <p>Reading Books and articles related to IT and Business Management</p>
+<p>Educating clients about potential cybersecurity threats, that they may face. And how they can protect their infrastructure against potential breaches.</p>
+<p>Creating and enforcing cybersecurity guidelines for organizations</p>
       <p>Watching videos about my dream vehicle, <a href="https://www.youtube.com/watch?v=pl6L-tXd8yo">Toyota Land Cruiser 40 series</a></p>
       <p>Motorcycles</p>
 
