--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <hr>
     <div class="skill-row">
 
-      <h2>Projects and Hobbies</h2>
+      <h2>Projects</h2>
 
       <img class="hobbies" src="hobbies.png" width="200" height="200">
       
