--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <img class="hobbies" src="hobbies.png" width="200" height="200">
       
       <p><a href="https://greshanbovithanthrige.medium.com/">Blogging</a></p>
-      <p><a href="https://youtu.be/yLvxnuM0BKY">ESXI Sever Project</a></p>
+      <p><a href="https://youtu.be/yLvxnuM0BKY">ESXI Sever Project (VMware vSphere)</a></p>
       <p><a href="https://drive.google.com/drive/folders/1uWs2hKOyu6YUQx9yknq1ZfXY_ZIJ7sIR?usp=sharing"> Custom Open Frame Server rack for my room </a></p>
       <p><a href="https://drive.google.com/drive/folders/1pDNX85b5bh0MDkX2Ii0WkJ4UCiOZ8WfE?usp=sharing"> 24/7 running Torrent Box project with a Raberry Pi 2 Model B</a></p>
       <p><a href="https://drive.google.com/drive/folders/1G60pORIFLIIBUbvu_fGdwZ1q6OWYR3op?usp=sharing"> Sample work from GB Enterprises</a></p>
