--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <p><a href="https://drive.google.com/drive/folders/1y_1tL_3lfZaXHcVeyou1suOHYa0UDQQy?usp=sharing">DIY 18650 3S5P Battery Pack for a Home Genarator exitation issue</a></p>
   
     <p><a href="https://youtu.be/MUyKXJJOx-0"> DIY Laptop Cooling Fan with Variable Speed Control (With a PWM Module)</a></p>
-      <p>Managing my homelab (Virtualization)</p>
+      <p>Maintaining  my homelab environment (Virtualization)</p>
 <p>Creating and enforcing cybersecurity guidelines for organizations</p>
 
 
