--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <p>Computer Hardware Technician <Strong>(NVQ LEVEL 4, National Apprentice and Industrial Training Authority)</Strong></p>
       <p>Computer Applications Assistant <Strong>(NVQ LEVEL 3, National Apprentice and Industrial Training Authority)</Strong></p>
-      <a href="https://drive.google.com/file/d/1IA-uAxu2mvnzGkGeWsCj0CBtzZuAY-4A/view?usp=sharing"><p>Google IT Support Professional Certificate (5-course Specialization)</strong></p></a>
+      <a class="certs-with-transcripts" href="https://drive.google.com/file/d/1IA-uAxu2mvnzGkGeWsCj0CBtzZuAY-4A/view?usp=sharing"><p>Google IT Support Professional Certificate (5-course Specialization)</strong></p></a>
       <p>The Fundementals of Digital Marketing <strong>(Google Digital Garage)</strong></p>
       <p>Advertising with Facebook <strong>(Facebook, Specialization)</strong></p>                                                   
       <p>Networking Essentials <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
