--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <p><a href="https://drive.google.com/drive/folders/1G60pORIFLIIBUbvu_fGdwZ1q6OWYR3op?usp=sharing"> Sample work from GB Enterprises</a></p>
 <p><a href="https://drive.google.com/drive/folders/1y_1tL_3lfZaXHcVeyou1suOHYa0UDQQy?usp=sharing">DIY 18650 3S5P Battery Pack for a Home Genarator exitation issue</a></p>
 <p><a href="https://youtu.be/MUyKXJJOx-0"> DIY Laptop Cooling Fan with Variable Speed Control (With a PWM Module)</a></p>
-<a href="https://drive.google.com/folderview?id=1nlQmW1vKHY7PEzZmKK4jqWAhfUgd3HbS"><p> Maintaining  my homelab environment (Virtualization)</p></a>
+<a href="https://drive.google.com/folderview?id=1nlQmW1vKHY7PEzZmKK4jqWAhfUgd3HbS"><p> Maintaining and experimenting on my homelab environment (Type I and type II hypervisors) (Virtualization)</p></a>
 <p>Creating and enforcing cybersecurity guidelines for organizations</p>
 
 
