--- a/index.html
+++ b/index.html
@@ -113,15 +113,25 @@
 
       
 <p><a href="https://greshanbovithanthrige.medium.com/">Blogging (My current blog)</a></p>
+
 <p><a href="https://greshanbovithanthrige.github.io/personal-blog-mkII/">Personal Blog Project (Work in  progress) </a></p>
+
 <p><a href="https://youtu.be/yLvxnuM0BKY">ESXI Sever Project (VMware vSphere)</a></p>
+
 <p><a href="https://drive.google.com/drive/folders/1uWs2hKOyu6YUQx9yknq1ZfXY_ZIJ7sIR?usp=sharing"> Custom Open Frame Server rack for my room </a></p>
+
 <p><a href="https://drive.google.com/drive/folders/1pDNX85b5bh0MDkX2Ii0WkJ4UCiOZ8WfE?usp=sharing"> 24/7 running Torrent Box project with a Raberry Pi 2 Model B</a></p>
+
 <p><a href="https://drive.google.com/drive/folders/1G60pORIFLIIBUbvu_fGdwZ1q6OWYR3op?usp=sharing"> Sample work from GB Enterprises</a></p>
+
 <p><a href="https://drive.google.com/drive/folders/1y_1tL_3lfZaXHcVeyou1suOHYa0UDQQy?usp=sharing">DIY 18650 3S5P Battery Pack for a Home Genarator exitation issue</a></p>
+
 <p><a href="https://youtu.be/MUyKXJJOx-0"> DIY Laptop Cooling Fan with Variable Speed Control (With a PWM Module)</a></p>
+
 <a href="https://drive.google.com/folderview?id=1nlQmW1vKHY7PEzZmKK4jqWAhfUgd3HbS"><p> Maintaining and experimenting on my homelab environment (Type I and type II hypervisors) (Virtualization)</p></a>
 <p>Creating and enforcing cybersecurity guidelines for organizations</p>
+
+<a href="https://greshanbovithanthrige.medium.com/generator-room-cooling-automation-project-stc-1000-thermostat-d0d217ce494c"><p>Generator room exhaust fan automation project</p></a>
 
 
 <hr>
