--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       <p>Windows Environment (Intermediate)</p>
       <p>Linux Environment (Workin Proficiency)</p>
 
-      <p>Technical Support (Advanced)</p>
+      <p>Technical Support (Advanced)</p> 
+      <p>Googling (Advanced)</p>                 
       <p>HTML (Working Proficiency)</p>
       <p>CSS (Working Proficiency)</p>
       <p>MySQL (Intermediate)</p>
