--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <p>Linux Environment (Workin Proficiency)</p>
 
       <p>Technical Support (Advanced)</p> 
-      <p>Googling (Advanced)</p>                 
+      <p>Googling</p>                 
       <p>HTML (Working Proficiency)</p>
       <p>CSS (Working Proficiency)</p>
       <p>MySQL (Intermediate)</p>
