--- a/index.html
+++ b/index.html
@@ -42,17 +42,19 @@
         <img class="hoodie-boy" src="hoodie-boy.png" width="200" height="200">
 
     <div class="skills">
-      <p>System Administration (Workin Proficiency)</p>
+      <p>System Administration (Advanced)</p>
+      <p>Microsoft Azure Administration (Workin Proficiency)</p>
+      <p>Microsoft 365 Administration (Intermediate)</p>
       <p>Hardware Configuration (Advanced) </p>
       <p>Hardware Troubleshooting (Advanced)</p>
       <p>Preventive Maintainance (Advanced) </p>
       <p>Computer Repair (Advanced) </p>
-      <p>Network Configuration (Intermediate)</p>
+      <p>Network Configuration (Advanced)</p>
       <p>Internet Protocol Suite (TCP/IP) </p>
       <p>Software Installation (Advanced)</p>
       <p>Troubleshooting (Advanced)</p>
-      <p>Windows Environment (Intermediate)</p>
-      <p>Linux Environment (Workin Proficiency)</p>
+      <p>Windows Environment (Advanced)</p>
+      <p>Linux Environment (Intermediate)</p>
 
       <p>Technical Support (Advanced)</p> 
       <p>Googling</p>                 
@@ -61,6 +63,7 @@
       <p>MySQL (Intermediate)</p>
       <p>Android</p>
       <p>Open Source</p>
+      <p>IT Infrastructure Engineering</p>
       <p>IT Infrastructure Management</p>
       <p>Customer Service</p>
       <p>Vendor Relations</p>
@@ -92,6 +95,7 @@
       <h3>IT</h3>
 
       <p>Computer Hardware Technician <Strong>(NVQ LEVEL 4, National Apprentice and Industrial Training Authority)</Strong></p>
+      <p>Computer Network Technician <Strong>(NVQ LEVEL 4, National Apprentice and Industrial Training Authority)</Strong></p>                                                 
       <p>Computer Applications Assistant <Strong>(NVQ LEVEL 3, National Apprentice and Industrial Training Authority)</Strong></p>
       <p>RedHat Enterprise Linux Fundamentals <Strong>(RedHat)</Strong></p>
       <p>Google IT Support Professional Certificate <strong>(5-course Specialization)</strong></p></a>
