--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="top-container">
     <img class="top-cloud" src="cloud.png" alt=cloud-img" />
     <h1>I'm Greshan</h1>
-    <h3>an IT support specialist</h3>
+    <h3>an IT Infrastructure Engineer</h3>
     <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
     <img  class="cover-mountain" src="mountain.png" alt="mountain-img" />
   </div>
@@ -29,7 +29,7 @@
     <div class="profile">
       <img src="GB.png" alt="img-png" height="200" width="200">
       <h2>Hello.</h2>
-      <p class="intro">Dependable and goal-oriented IT Specialist with 5+ years of experience maintaining IT systems and providing comprehensive customer support. Provided in-depth technical support to clients at a Tier 2 level, solving 99.2% of issues
+      <p class="intro">Dependable and goal-oriented IT Infrastructure Engineer with 8+ years of experience maintaining IT systems and providing comprehensive customer support. Provided in-depth technical support to clients at a Tier 2 level, solving 99.2% of issues
         without transferring to Tier 3 support.
         And I'm the owner of GB Enterprises. A company which provides technical support for small scale companies.</p>
     </div>
@@ -53,7 +53,8 @@
       <p>Internet Protocol Suite (TCP/IP) </p>
       <p>Software Installation (Advanced)</p>
       <p>Troubleshooting (Advanced)</p>
-      <p>Windows Environment (Advanced)</p>
+      <p>Windows Desktop Environment (Advanced)</p>
+      <p>Windows Server Environment (Advanced)</p>
       <p>Linux Environment (Intermediate)</p>
 
       <p>Technical Support (Advanced)</p> 
@@ -89,7 +90,7 @@
       <p>Introduction to Marketing <strong>(University of Pensylvania, Wharton)</strong></p>
       <p>Professional Skills for International Business <strong>(Endorsed by the CMI, University of London)</strong></p>
       <p>Management Skills for International Business <strong>(Endorsed by the CMI, University of London)</strong></p>
-      <p>Project Management Foundations<strong> (National Association of State Boards of Accountancy, Linkedin)</strong></p>
+      <p>Project Management Foundations (NASBA, Continuing Professional Education Credit (CPE): 8.6)</strong></p>
       <p>Conflict Management Specialization <strong>(University of California, Irvine)</strong></p>
 
       <h3>IT</h3>
@@ -98,7 +99,8 @@
       <p>Computer Network Technician <Strong>(NVQ LEVEL 4, National Apprentice and Industrial Training Authority)</Strong></p>                                                 
       <p>Computer Applications Assistant <Strong>(NVQ LEVEL 3, National Apprentice and Industrial Training Authority)</Strong></p>
       <p>RedHat Enterprise Linux Fundamentals <Strong>(RedHat)</Strong></p>
-      <p>Google IT Support Professional Certificate <strong>(5-course Specialization)</strong></p></a>
+      <p>Google IT Support Certificate 5 Course Specialization (American Council of Education (ACE): 12)</strong></p></a>
+      <p>ISO/IEC 27001 Information Security Associate <Strong>(SkillFront)</Strong></p>
       <p>The Fundementals of Digital Marketing <strong>(Google Digital Garage)</strong></p>
       <p>Advertising with Facebook <strong>(Facebook, Specialization)</strong></p>                                                   
       <p>Networking Essentials <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
