--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <p>Introduction to Marketing <strong>(University of Pensylvania, Wharton)</strong></p>
       <p>Professional Skills for International Business <strong>(Endorsed by the CMI, University of London)</strong></p>
       <p>Management Skills for International Business <strong>(Endorsed by the CMI, University of London)</strong></p>
-      <p>Project Management Foundations (NASBA, Continuing Professional Education Credit (CPE): 8.6)</strong></p>
+      <p>Project Management Foundations <strong>(NASBA, Continuing Professional Education Credit (CPE): 8.6)</strong></p>
       <p>Conflict Management Specialization <strong>(University of California, Irvine)</strong></p>
 
       <h3>IT</h3>
@@ -99,7 +99,7 @@
       <p>Computer Network Technician <Strong>(NVQ LEVEL 4, National Apprentice and Industrial Training Authority)</Strong></p>                                                 
       <p>Computer Applications Assistant <Strong>(NVQ LEVEL 3, National Apprentice and Industrial Training Authority)</Strong></p>
       <p>RedHat Enterprise Linux Fundamentals <Strong>(RedHat)</Strong></p>
-      <p>Google IT Support Certificate 5 Course Specialization (American Council of Education (ACE): 12)</strong></p></a>
+      <p>Google IT Support Certificate 5 Course Specialization <Strong>(American Council of Education (ACE): 12)</strong></p></a>
       <p>ISO/IEC 27001 Information Security Associate <Strong>(SkillFront)</Strong></p>
       <p>The Fundementals of Digital Marketing <strong>(Google Digital Garage)</strong></p>
       <p>Advertising with Facebook <strong>(Facebook, Specialization)</strong></p>                                                   
