--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2>Hello.</h2>
       <p class="intro">Dependable and goal-oriented IT Infrastructure Engineer with 8+ years of experience maintaining IT systems and providing comprehensive customer support. Provided in-depth technical support to clients at a Tier 2 level, solving 99.2% of issues
         without transferring to Tier 3 support.
-        And I'm the owner of GB Enterprises. A company which provides technical support for small scale companies.</p>
+        And I'm the owner of GB Enterprises. A company which provides IT Infrastructure solutions for SMEs.</p>
     </div>
 
     <hr>
