--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <img src="education.png" width="200" height="200">
       <p>Completed my High School Education from <a href="http://www.mahanamacc.sch.lk/index.html">Mahanama College, Monaragala </a> (2014)</p>
       <p>Diploma in Human Resource Management, (2019-2020, <a href="https://www.jmc.lk"> JMC</a>)</p>
-      <p>National Diploma in ICT (NVQ LEVEL 5)</a><a href="https://www.vtasl.gov.lk"> VTA, Sri Lanka</a>)</p>
+      <p>National Diploma in ICT (NVQ LEVEL 5)</a><a href="https://www.vtasl.gov.lk"> VTA, Sri Lanka</a></p>
       <p>CCENT (Cisco Networking Academy, Sri Lanka</a>)</p>
       <hr>
       <h2>Certifications</h2>
