--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta content="IT support specialist with 5+ years of experience">
+  <meta content="IT Infrastructure Engineer with 9+ years of experience">
   <link rel="SHORTCUT ICON" href="GB.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
   <div class="top-container">
     <img class="top-cloud" src="cloud.png" alt=cloud-img" />
     <h1>I'm Greshan</h1>
-    <h3>an IT Infrastructure Engineer</h3>
+    <h3>A 2nd line IT Infrastructure Engineer</h3>
     <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
     <img  class="cover-mountain" src="mountain.png" alt="mountain-img" />
   </div>
@@ -29,9 +29,9 @@
     <div class="profile">
       <img src="GB.png" alt="img-png" height="200" width="200">
       <h2>Hello.</h2>
-      <p class="intro">Dependable and goal-oriented IT Infrastructure Engineer with 8+ years of experience maintaining IT systems and providing comprehensive customer support. Provided in-depth technical support to clients at a Tier 2 level, solving 99.2% of issues
+      <p class="intro">Dependable and goal-oriented IT Infrastructure Engineer with 9+ years of experience maintaining IT systems and providing comprehensive customer support. Provided in-depth technical support to clients at a Tier 2 level, solving 99.2% of issues
         without transferring to Tier 3 support.
-        And I'm the owner of GB Enterprises. A company which provides IT Infrastructure solutions for SMEs.</p>
+        And I'm the owner of GB Enterprises. A company which provides Managed IT Infrastructure solutions for SMEs.</p>
     </div>
 
     <hr>
