--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <p>Introducation to IoT <strong>(Cisco Networking Academy, Sri Lanka)</strong></p>
       <p>Elements of AI <strong>(University of Helsinki)</strong></p>
       <p>PCAP: Programming Essentials in Python <strong>(Python Institute)</strong></p>
-      <p>NSE 3 Network Security Associate <strong> Fortinet Training Institute </strong></p>
+      <p>NSE 3 Network Security Associate <strong> (Fortinet Training Institute) </strong></p>
       <p> CCNAv7: Introduction to Networks <strong>(Cisco Networking Academy, Sri Lanka)</strong> </p>    
                                                             
      
