--- a/index.html
+++ b/index.html
@@ -42,17 +42,25 @@
         <img class="hoodie-boy" src="hoodie-boy.png" width="200" height="200">
 
     <div class="skills">
+      <p>Digital Marketing </p>
       <p>System Administration </p>
       <p>Microsoft Azure Administration </p>
       <p>Microsoft 365 Administration </p>
       <p>Google Workplace Administration </p>
-      <p>Domain & DNS Management </p>
+      <p>SaaS</p>
+      <p>Email Troubleshooting and Cofiguration (Exchange Online, IMAP and SMTP)</p>
       <p>Third Party Email Filtering (Full Email Security Setup and Config, Barracuda) </p>
+      <p>cPanel</p>
+      <p>Help Desk (Ticketing System) Administration</p>
+      <p>Microsoft Outlook</p>
+      <p>Microsoft SharePoint </p>
+      <p>Domain & DNS Management </p>
+      <p>PowerShell Scripting </p>
       <p>Disaster Recovery (Barracuda, Redstor and Microsoft) </p> 
-      <p>Enterprise level AV </p>
-      <p>Incidents and Service Request management </p>
+      <p>Enterprise level Anti Virus </p>
+      <p>Incident and Service Request management </p>
       <p>FTTC, FTTP, ADSL, Broadband and Leased lines </p>
-      <p>Network Terminating Equipment Monitoring </p>
+      <p>Network Terminating Equipment (NTE) Monitoring </p>
       <p>VoIP Telephone Systems (Soft Phones and hard phones) </p>
       <p>Hardware Configuration </p>
       <p>Hardware Troubleshooting </p>
@@ -61,8 +69,12 @@
       <p>Computer Troubleshooting & Repair </p>
       <p>Network Configuration & Troubleshooting </p>
       <p>Internet Protocol Suite (TCP/IP) </p>
+      <p>Routing & Switching </p>
+      <p>Access Point Administration (Ubiquity, Draytek)</p>
       <p>Windows Desktop Environment </p>
       <p>Windows Server Environment </p>
+      <p>Active Directory </p>
+      <p>Apple Product Support </p>
       <p>Mac OS Environment </p>
       <p>Linux Environment </p>
       <p>Technical Support </p> 
@@ -71,7 +83,7 @@
       <p>Customer Service</p>
       <p>Vendor Relations</p>
       <p>IT Consulting </p>
-      <p>Cybersecurity & Related Policies </p> 
+      <p>Cybersecurity, Related Policies & Cyber Risk Management</p> 
  </div>
 
       <hr>
