--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
       <p>Microsoft 365 Administration </p>
       <p>Google Workplace Administration </p>
       <p>SaaS</p>
+      <p>PaaS</p>
       <p>Email Troubleshooting and Cofiguration (Exchange Online, IMAP and SMTP)</p>
       <p>Third Party Email Filtering (Full Email Security Setup and Config, Barracuda) </p>
-      <p>cPanel</p>
+      <p>cPanel Administration</p>
       <p>Help Desk (Ticketing System) Administration</p>
       <p>Microsoft Outlook</p>
       <p>Microsoft SharePoint </p>
