--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <p>Domain & DNS Management </p>
       <p>PowerShell Scripting </p>
       <p>Disaster Recovery (Barracuda, Redstor and Microsoft) </p> 
-      <p>Enterprise level Anti Virus </p>
+      <p>Enterprise level Anti Virus & Policy Setup</p>
       <p>Incident and Service Request management </p>
       <p>FTTC, FTTP, ADSL, Broadband and Leased lines </p>
       <p>Network Terminating Equipment (NTE) Monitoring </p>
