--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <p>Incident and Service Request management </p>
       <p>FTTC, FTTP, ADSL, Broadband and Leased lines </p>
       <p>Network Terminating Equipment (NTE) Monitoring </p>
-      <p>VoIP Telephone Systems (Soft Phones and hard phones) </p>
+      <p>VoIP Telephone Systems (Soft Phones and Hard Phones) </p>
       <p>Hardware Configuration </p>
       <p>Hardware Troubleshooting </p>
       <p>Software Troubleshooting </p>
